#407 - Fixed desktop blog

--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -750,6 +750,12 @@ xxl
 
 	/* Blog */
 		/* General */
+			@media (min-width: 992px) and (max-width: 1199px) {
+				.blog .container {
+					max-width: 900px !important;
+				}
+			}
+
 			@media (min-width: 1200px) and (max-width: 1599px) {
 				.blog .container {
 					max-width: 1100px !important;
@@ -761,6 +767,12 @@ xxl
 					max-width: 1100px !important;
 				}
 			}
+			
+			.blog .list {
+				width: 100%;
+				box-sizing: border-box;
+				padding-right: 30px;
+			}
 		/* General */
 
 		/* Header */
@@ -768,6 +780,11 @@ xxl
 				width: 100%;
 				height: auto;
 				background-color: #f3f0eb;
+			}
+
+			.blog h1,
+			.blog h2 {
+				color: #757575;
 			}
 
 			.blog .title i {
@@ -875,8 +892,8 @@ xxl
 				margin: 0;
 				padding: 5px 10px;
 			    
-			    font-size: 16px;
-			    line-height: 16px;
+			    font-size: 14px;
+			    line-height: 18px;
 				text-decoration: none;
 			}
 		/* Date */
@@ -937,6 +954,13 @@ xxl
 				height: auto;
 			}
 
+			.blog .post .about h2 {
+				font-size: 32px;
+				line-height: 38px;
+				margin: 0px;
+				padding: 0px 0px 10px;
+			}
+
 			.blog .post .about h2 a {
 				font-size: inherit;
 				color: #374047;
@@ -965,10 +989,6 @@ xxl
 			    box-sizing: border-box;
 			}
 
-			.blog .post .about .btn-sm {
-				width: 200px;
-			}
-
 
 			.blog .post .about {
 				font-size: 16px;
@@ -988,6 +1008,19 @@ xxl
 			    color: #585858;
 			    line-height: 26px;
 			    color: #739d3d;
+			}
+
+			.blog .post .about .btn {
+				max-width: 180px;
+				padding: 0px 20px;
+
+				font-size: 14px;
+			    font-weight: 600;
+			    line-height: 44px;
+			    letter-spacing: 0em;
+			    color: #ffffff;
+			    text-align: center;
+			    text-decoration: none;
 			}
 
 			@media (min-width: 768px) and (max-width: 991px) {
@@ -1080,8 +1113,9 @@ xxl
 				padding: 8px 12px;
 				background-color: #FFFFFF;
 
-				font-size: 16px;
+				font-size: 14px;
 			    line-height: 24px;
+			    font-weight: 600;
 			    color: #585858;
 			    text-decoration: none;
 
@@ -1095,6 +1129,11 @@ xxl
 			.blog .list-group .list-group-item:hover {
 				background-color: #f3f0eb;
 			}
+
+			.blog .list-group .list-group-item.active {
+				background-color: #f3f0eb;
+				border-left: 2px solid #585858;
+			}
 		/* Category Widget */
 
 		/* Widget */
@@ -1105,10 +1144,14 @@ xxl
 				box-sizing: border-box;
 				padding: 8px 12px;
 				background-color: #FFFFFF;
+				border-bottom: 1px solid #f3f0eb;
 
 			    font-size: 16px;
-			    color: #585858;
 			    line-height: 24px;
+			    font-weight: 600;
+			    line-height: 24px;
+			    color: #585858;
+			    text-decoration: none;
 			    box-sizing: border-box;
 				
 				-webkit-transition: background-color .25s;
@@ -1121,6 +1164,18 @@ xxl
 			.blog .widget .post-widget a:hover {
 				background-color: #f3f0eb;
 			}
+
+			.blog .widget .post-widget a span{
+				display: block;
+				margin: 5px 0px;
+				font-size: 14px;
+			    line-height: 24px;
+			    font-weight: 400;
+			    line-height: 18px;
+			    text-decoration: none;
+			    box-sizing: border-box;
+			}
+
 		/* Widget */
 
 		/* Fitured */
@@ -1254,6 +1309,27 @@ xxl
 			    color: #FFFFFF;
 			}
 		/* Fitured */
+
+		/* Progress view */
+			.progress-view {
+				display: block;
+				position: fixed;
+				top: 61px;
+				left: 0px;
+				width: 100%;
+				height: 4px;
+				z-index: 10000;
+				background-color: transparent;
+			}
+
+			.progress-view .marker {
+				position: relative;
+				display: block;
+				width: 0%;
+				height: 100%;
+				background-color: #5aa02e;
+			}
+		/* Progress view */
 	/* Blog */
 /* Assets */
 
