--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -74,12 +74,12 @@ xxl
 
 		@media (min-width: 1200px) and (max-width: 1599px) {
 			.container { max-width: 1194px; }
-			.container-wrapper .container { max-width: 600px; }
+			.container-wrapper .container { max-width: 680px; }
 		}
 
 		@media (min-width: 1600px) {
 			.container { max-width: 1418px; }
-			.container-wrapper .container { max-width: 600px; }
+			.container-wrapper .container { max-width: 680px; }
 		}
 	/* Grid */
 
@@ -728,38 +728,45 @@ xxl
 				font-size: 14px;
 				line-height: 22px;
 			    font-weight: 500;
-			    color: #374047;
-			    box-sizing: border-box;
-			}
-
-			#account-testimonials .testimonials-list .item .about .good {
-				top: 4px;
-				display: inline-block;
-				width: 22px;
-				height: 22px;
-				margin-right: 15px;
-			}
-
-			#account-testimonials .testimonials-list .item .about .firstname {
-				color: #749D3E;
-			}
-
-			#account-testimonials .testimonials-list .item .about .good.green svg * {
-				fill: #749D3E;
-			}
-
-			#account-testimonials .testimonials-list .item .about .good.red svg * {
-				fill: #e2617f;
-			}
-
-
-			#account-testimonials .testimonials-list .item .text {
-				font-size: 14px;
-				line-height: 22px;
-			    font-weight: 200;
 			    color: #868281;
 			    box-sizing: border-box;
 			}
+
+			/* Rating */
+				#account-testimonials .testimonials-list .item .about .rating {
+					display: inline-block;
+					width: auto;
+					height: 22px;
+					margin-right: 15px;
+				}
+
+				#account-testimonials .testimonials-list .item .about .rating i {
+					margin-left: 5px;
+					font-size: 18px;
+    				line-height: 18px;
+				}
+
+				#account-testimonials .testimonials-list .item .about .rating i.red{
+    				color: #e2617f;
+				}
+			/* Rating */
+
+			/* Author */
+				#account-testimonials .testimonials-list .item .about .firstname {
+					color: #749D3E;
+				}
+			/* Author */
+
+			/* Text */
+				#account-testimonials .testimonials-list .item .text,
+				#account-testimonials .testimonials-list .item .text * {
+					font-size: 14px;
+					line-height: 22px;
+				    font-weight: 200;
+				    color: #374047;
+				    box-sizing: border-box;
+				}
+			/* Text */
 
 			/* Childs */
 				#account-testimonials .testimonials-list .item .childs {
@@ -1599,6 +1606,156 @@ xxl
 			}
 		/* Progress view */
 	/* Blog */
+
+	/* Testimonials */
+		#testimonials .testimonials-list {
+		}
+
+		#testimonials .testimonials-list .item {
+			margin-bottom: 30px;
+			overflow: hidden;
+		}
+
+		#testimonials .testimonials-list .item .author {
+			float: left;
+			display: block;
+			width: 15%;
+		}
+
+		#testimonials .testimonials-list .item .author .image {
+			display: block;
+			width: 70px;
+			height: 70px;
+			border-radius: 100px;
+			background-color: #5aa02e;
+
+			font-size: 34px;
+			line-height: 70px;
+		    font-weight: 500;
+			color: #FFFFFF;
+			text-align: center;
+		}
+
+		#testimonials .testimonials-list .item .body {
+			float: left;
+			display: block;
+			width: 85%;
+			height: auto;
+		}
+
+		#testimonials .testimonials-list .item .about {
+			margin-bottom: 10px;
+
+			font-size: 14px;
+			line-height: 22px;
+		    font-weight: 500;
+		    color: #868281;
+		    box-sizing: border-box;
+		}
+
+		/* Rating */
+			#testimonials .testimonials-list .item .rating {
+				display: inline-block;
+				width: auto;
+				height: 14px;
+				margin-right: 15px;
+			}
+
+			#testimonials .testimonials-list .item .rating i {
+				margin-left: 5px;
+				font-size: 14px;
+				line-height: 14px;
+			}
+
+			#testimonials .testimonials-list .item .rating i.red{
+				color: #e2617f;
+			}
+		/* Rating */
+
+		/* Author */
+			#testimonials .testimonials-list .item .about .firstname {
+				color: #749D3E;
+			}
+		/* Author */
+
+		/* Text */
+			#testimonials .testimonials-list .item .text {
+				height: auto;
+			    font-size: 16px;
+			    color: #585858;
+			    line-height: 26px;
+			    box-sizing: border-box;
+			    padding: 0px;
+			}
+
+			#testimonials .testimonials-list .item .text * {
+				font-size: inherit;
+			    color: inherit;
+			    line-height: inherit;
+			    margin: 0;
+			    padding: 0;
+			}
+		/* Text */
+
+		/* Date */
+			#testimonials .testimonials-list .item .date {
+				font-size: 14px;
+    			line-height: 18px;
+			    color: #868281;
+			}
+		/* Date */
+
+		/* Childs */
+			#testimonials .testimonials-list .item .childs {
+				display: block;
+				width: 100%;
+				height: auto;
+				margin: 15px 0px;
+			}
+
+			#testimonials .testimonials-list .item .childs .child {
+				display: block;
+				width: 100%;
+				height: auto;
+				overflow: hidden;
+				margin: 0px 0px 15px;
+			}
+
+			#testimonials .testimonials-list .item .childs .child .author {
+				display: block;
+				float: left;
+				width: 80px;
+				height: 100%;
+			}
+
+			#testimonials .testimonials-list .item .childs .child .author .image {
+				display: block;
+				width: 60px;
+				height: 60px;
+				border-radius: 100px;
+			}
+
+			#testimonials .testimonials-list .item .childs .child .body {
+				display: block;
+				float: left;
+				width: calc(100% - 80px);
+				height: 100%;
+			}
+
+			#testimonials .testimonials-list .item .childs .answer {
+				display: block;
+				border: none;
+				background-color: transparent;
+				cursor: pointer;
+				margin-left: 80px;
+
+				font-size: 12px;
+				line-height: 22px;
+			    font-weight: 700;
+				color: #749D3E;
+			}
+		/* Childs */
+	/* Testimonials */
 /* Assets */
 
 /* Modals */
@@ -3288,43 +3445,58 @@ xxl
 			}
 		}
 
-
 		/* Toggles */
 			.btn-toggle {
 				display: block;
+				position: relative;
 				width: auto;
 				height: auto;
 			}
 
-			.btn-toggle.light button {
+			.btn-toggle button {
+				position: relative;
+				margin-left: 5px;
 				cursor: pointer;
+				z-index: 100;
 			}
 
-			.btn-toggle button:nth-child(2) {
-				margin-left: 15px;
+			.btn-toggle input{
+				display: block;
+				position: absolute;
+				top: 0;
+				left: 0;
+				width: 100%;
+				height: 100%;
+				z-index: -1;
+				background-color: transparent;
+				border-color: transparent;
+				color: transparent;
 			}
 
-			.btn-toggle.light button {
+			.btn-toggle.rating button {
 				border: none;
 				background-color: transparent;
+
+				font-size: 22px;
+				line-height: 22px;
 			}
 
-			.btn-toggle.light button i svg * {
-				-webkit-transition: fill .5s;
-				-moz-transition: fill .5s;
-				-ms-transition: fill .5s;
-				-o-transition: fill .5s;
-				transition: fill .5s;
+			.btn-toggle.rating button i {
+				-webkit-transition: color .5s;
+				-moz-transition: color .5s;
+				-ms-transition: color .5s;
+				-o-transition: color .5s;
+				transition: color .5s;
 			}
 
-			.btn-toggle.light button.btn-green:hover i svg *,
-			.btn-toggle.light button.btn-green.active i svg * {
-				fill: #749D3E;
+			.btn-toggle.rating button.btn-green:hover,
+			.btn-toggle.rating button.btn-green.active {
+				color: #749D3E;
 			}
 
-			.btn-toggle.light button.btn-red:hover i svg *,
-			.btn-toggle.light button.btn-red.active i svg * {
-				fill: #e2617f;
+			.btn-toggle.rating button.btn-red:hover,
+			.btn-toggle.rating button.btn-red.active {
+				color: #e2617f;
 			}
 		/* Toggles */
 	/* Buttons */
@@ -3692,6 +3864,56 @@ xxl
 			}
 		/* Select */
 	/* Inputs */
+
+	/* Pagination */
+		.pagination-results {
+			font-size: 14px;
+		    line-height: 18px;
+		    color: #868281;
+		}
+
+		.pagination {
+			display: inline-block;
+			width: auto;
+			height: auto;
+
+			list-style: none;
+			overflow: hidden;
+			border-radius: 4px;
+		}
+
+		.pagination > li {
+			display: block;
+			float: left;
+			width: 32px;
+			height: 32px;
+			background-color: #739d3d;
+
+			font-size: 16px;
+			line-height: 32px;
+			color: rgba(255,255,255,.5);
+			text-align: center;
+		}
+
+		.pagination > li.active {
+			color: rgba(255,255,255,1);
+		}
+
+		.pagination > li {
+			border-right: 1px solid rgba(255,255,255,.25);
+		}
+
+		.pagination > li:last-child {
+			border: none;
+		}
+
+		.pagination > li a {
+			font-size: inherit;
+			line-height: inherit;
+			color: inherit;
+			text-decoration: none;
+		}
+	/* Pagination */
 
 	/* Privacy */
 		form .privacy {
