Fixed bonus account view

--- a/catalog/view/theme/default/stylesheet/core.css
+++ b/catalog/view/theme/default/stylesheet/core.css
@@ -806,7 +806,7 @@ xxl
 					margin-bottom: 5px;
 					font-size: 22px;
 	    			font-weight: 500;
-					color: #adc794;
+					color: #e2617f;
 				}
 
 				.remodal.modal-basket .cart-page-total .bonus .body span img,
@@ -5423,7 +5423,7 @@ xxl
     .text-color-black { color: #1A1A18 !important; }
     .text-color-green { color: #749D3E !important; }
     .text-color-orange { color: #f17e46 !important; }
-    .text-color-red { color: #d00 !important; }
+    .text-color-red { color: #e2617f !important; }
 
     .background-color-white { background-color: #FFFFFF; }
     .background-color-gray { background-color: #F2F2F2; }
